[project]
name = "crisisflow"
version = "0.1.0"
description = "AI-powered emergency response simulation environment built for OpenEnv."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "openai",
  "python-dotenv",
  "requests",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
environment = "backend.env:CrisisFlowEnv"
inference_script = "inference.py"
config = "openenv.yaml"